# GBAStation_3DS

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_local.sh  build_switch_nro.sh  make-patches.sh
.ci/: libretro-ci.yml  mxe.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-switch.yml
CMakeModules/: GenerateBuildInfo.cmake  GenerateSettingKeys.cmake  SwitchMainTlsBeforeBss.ld  SwitchToolchain.cmake
ci/: README-switchvk.md  fetch-switchvk.sh  test-fetch-switchvk.py
patches/: externals_cryptopp.patch  externals_dynarmic.patch  externals_libressl.patch  externals_oaknut.patch
src/: CMakeLists.txt
src/GBAStation/: CMakeLists.txt  display_settings.h  emu_window_switch.cpp  emu_window_switch.h  game_db.cpp  game_db.h  init_array_diagnostics.cpp  input_mapping.cpp  input_mapping.h  main.cpp  switch_compat.cpp  switch_fastmem_resume.S  switch_keyboard.cpp  switch_libnx.h
src/GBAStation/overlay/: gbastation_config.cpp  gbastation_config.h  overlay_ui.cpp  overlay_ui.h  vulkan_menu_renderer.cpp  vulkan_menu_renderer.h  vulkan_overlay.cpp  vulkan_overlay.h
src/GBAStation/shaders/: menu.frag  menu.vert  menu_frag_spv.h  menu_vert_spv.h
src/android/: .gitignore
src/android/app/: build.gradle.kts
src/android/app/src/main/jni/: CMakeLists.txt  config.cpp  default_ini.h  id_cache.cpp  id_cache.h  multiplayer.cpp  multiplayer.h  native.cpp
src/android/app/src/main/jni/android_common/: android_common.cpp  android_common.h
src/android/app/src/main/jni/emu_window/: emu_window.cpp
src/android/app/src/main/res/layout/: dialog_multiplayer_room.xml
src/android/app/src/main/res/menu/: menu_in_game.xml  menu_overlay_options.xml
src/android/app/src/main/res/values-b+ca+ES+valencia/: strings.xml
src/audio_core/: CMakeLists.txt  cubeb_input.cpp  cubeb_sink.cpp  dsp_interface.cpp  input_details.cpp  input_details.h  libnx_input.cpp  libnx_input.h  libnx_sink.cpp  libnx_sink.h  sink_details.cpp  sink_details.h
src/audio_core/hle/: hle.cpp  hle.h
src/citra_libretro/: CMakeLists.txt  citra_libretro.cpp  libretro_vk.h
src/citra_qt/: CMakeLists.txt  citra_qt.cpp  citra_qt.h  game_list.cpp  hotkey_monitor.cpp  hotkey_monitor.h  hotkeys.cpp  hotkeys.h  main.ui  uisettings.h  update_checker.cpp
src/citra_qt/configuration/: config.cpp  configure.ui  configure_debug.cpp  configure_debug.ui  configure_dialog.cpp  configure_dialog.h  configure_graphics.cpp  configure_graphics.h  configure_graphics.ui  configure_hotkeys.cpp  configure_hotkeys_controller.cpp  configure_hotkeys_controller.h  configure_hotkeys_controller.ui  configure_input.cpp  configure_input.h  configure_input.ui  configure_motion_touch.cpp  configure_network.cpp  configure_network.ui
src/citra_qt/multiplayer/: chat_room.cpp  direct_connect.cpp  direct_connect.h  direct_connect.ui  host_room.cpp  host_room.h  host_room.ui  lobby.cpp  lobby.h  lobby.ui  state.cpp
src/citra_qt/util/sequence_dialog/: controller_sequence_dialog.cpp  controller_sequence_dialog.h  sequence_dialog.cpp  sequence_dialog.h
src/citra_room/: citra_room.cpp
src/common/: CMakeLists.txt  error.cpp  settings.cpp  settings.h  thread.cpp  thread.h  thread_worker.h  web_util.cpp  web_util.h
src/common/aarch64/: cpu_detect.cpp
src/common/dynamic_library/: dynamic_library.cpp  dynamic_library.h
src/core/: CMakeLists.txt  core.cpp  core.h  core_timing.cpp  core_timing.h  memory.cpp  memory.h  memory_switch_fastmem.cpp  memory_switch_fastmem.h  savestate.cpp  savestate_data.h
src/core/arm/dynarmic/: arm_dynarmic.cpp  arm_dynarmic.h  arm_dynarmic_diagnostics.h
src/core/cheats/: cheats.cpp  cheats.h  gateway_cheat.cpp
src/core/file_sys/: file_backend.h
src/core/frontend/: emu_window.cpp  emu_window.h  framebuffer_layout.cpp  framebuffer_layout.h
src/core/gdbstub/: gdbstub.cpp
src/core/hle/kernel/: address_arbiter.cpp  hle_ipc.cpp  hle_ipc.h  server_session.cpp  svc.cpp  thread.cpp  thread.h
src/core/hle/service/: service.cpp  service.h
src/core/hle/service/am/: am.cpp  am.h
src/core/hle/service/apt/: applet_manager.cpp
src/core/hle/service/cam/: y2r_u.cpp
src/core/hle/service/fs/: file.cpp  fs_user.cpp
src/core/hle/service/http/: http_c.cpp
src/core/hle/service/ldr_ro/: cro_helper.cpp
src/core/hle/service/soc/: soc_u.cpp
src/core/hle/service/ssl/: ssl_c.cpp
src/core/hw/: y2r.cpp  y2r.h
src/input_common/: CMakeLists.txt  main.cpp  switch_hid.cpp  switch_hid.h
src/input_common/sdl/: sdl_impl.cpp  sdl_joystick.cpp  sdl_joystick.h
src/network/: CMakeLists.txt
src/network/artic_base/: artic_base_client.cpp
src/tests/: CMakeLists.txt
src/tico/: CMakeLists.txt  emu_window_switch.cpp  emu_window_switch.h  main.cpp  switch_compat.cpp  switch_keyboard.cpp  switch_keyboard.h
src/tico/lang/: en.json  es.json  fr.json  ja.json  pt.json  zh.json
src/tico/overlay/: overlay_ui.cpp  overlay_ui.h  tico_config.cpp  tico_config.h  translation_manager.cpp  translation_manager.h  vulkan_overlay.cpp  vulkan_overlay.h
src/video_core/: CMakeLists.txt  gpu.cpp  gpu.h  overlay.cpp  overlay.h  rasterizer_accelerated.cpp  rasterizer_accelerated.h  video_core.cpp
src/video_core/host_shaders/: CMakeLists.txt  vulkan_cursor.frag  vulkan_cursor.vert  vulkan_overlay.frag  vulkan_overlay.vert
src/video_core/pica/: pica_core.cpp
src/video_core/renderer_opengl/: gl_blit_helper.cpp  gl_rasterizer.cpp  gl_texture_runtime.cpp  renderer_opengl.cpp  renderer_opengl.h
src/video_core/renderer_vulkan/: overlay_font.cpp  overlay_font.h  overlay_font_runtime.cpp  renderer_vulkan.cpp  renderer_vulkan.h  vk_common.h  vk_graphics_pipeline.cpp  vk_graphics_pipeline.h  vk_master_semaphore.cpp  vk_pipeline_cache.cpp  vk_pipeline_cache.h  vk_platform.cpp  vk_present_window.cpp  vk_present_window.h  vk_rasterizer.cpp  vk_rasterizer.h  vk_scheduler.cpp  vk_shader_disk_cache.cpp  vk_shader_disk_cache.h  vk_texture_runtime.cpp  vk_texture_runtime.h
src/video_core/shader/: shader_jit.cpp  shader_jit.h  shader_jit_a64_compiler.cpp  shader_jit_a64_compiler.h
(+62 files in other folders)
